# Zoku

./: .buildinfo  .pre-commit-config.yaml  README.md  genindex.html  index.html  install.sh  install_python.sh  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: index.doctree  zoku.dataset.doctree
.github/scripts/: build_docs.sh
.github/workflows/: build_and_host_docs.yaml
_modules/: index.html
_modules/zoku/dataset/: base.html  kaggledataset.html
_sources/: index.rst.txt
api/: index.html  zoku.dataset.html
docs/source/: conf.py
docs/source/api/: index.rst  zoku.dataset.rst
tests/: test_kaggledataset.py
zoku/common/: commons.py
zoku/dataset/: base.py  kaggledataset.py
