[tool.poetry]
name = "zoku"
version = "0.1.1"
description = ""
authors = ["chrissaher"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.4"
kaggle = "^1.6.14"
pre-commit = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
